# telegram_notifier

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: build_docker.yml
src/: main.rs  main_backup.rs
